Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53000

Changing default QLocale does not affect ResourceBundle at runtime

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.8.0 Alpha
    • 5.6.0
    • WebEngine
    • None
    • Linux
    • 89319455c36d48fe46a8501edd3c174c1de291fb, 7e0309fe3 (134-based-refactor)

      Qt WebEngine starts renderer processes with the --lang option for passing the actual QLocale setting. Thus already running processes are not expected use a new locale set in runtime. However, processes started after the locale setting should use the new locale. Qt WebEngine pass the appropriate --lang option for the new renderer process but the ResourceBundle instance doesn't get updated.

      The problem is demonstrated by the attached example. The second WebEngineView instance (viewEN) is created after a locale setting thus should set English error message in the view title. Instead of that it still set Hungarian error message.

      This problem can be reproduced on Linux only.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pvarga Peter Varga
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: